--- a/app/index.html
+++ b/app/index.html
@@ -50,11 +50,11 @@
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/lodash/dist/lodash.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -62,9 +62,11 @@
         <script src="scripts/launcher.js"></script>
         <script src="scripts/configuration.js"></script>
         <script src="scripts/services/services.js"></script>
+        <script src="scripts/models/models.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/urlMappings.js"></script>
         <script src="scripts/controllers/games.js"></script>
+        <script src="scripts/lib/odobo-ngresource.js"></script>
         <!-- endbuild -->
 </body>
 </html>
